Use StringBuilder instead of StringBuffer