@@ -122,17 +122,17 @@ public class JSONParser {
 					switch(token.type){
 					case Yytoken.TYPE_VALUE:
 						status=S_IN_FINISHED_VALUE;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(token.value);
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(createObjectContainer(containerFactory));
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(createArrayContainer(containerFactory));
 						break;
 					default:
@@ -155,7 +155,7 @@ public class JSONParser {
 							String key=(String)token.value;
 							valueStack.addFirst(key);
 							status=S_PASSED_PAIR_KEY;
-							statusStack.addFirst(new Integer(status));
+							statusStack.addFirst(Integer.valueOf(status));
 						}
 						else{
 							status=S_IN_ERROR;
@@ -195,7 +195,7 @@ public class JSONParser {
 						List newArray=createArrayContainer(containerFactory);
 						parent.put(key,newArray);
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newArray);
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
@@ -205,7 +205,7 @@ public class JSONParser {
 						Map newObject=createObjectContainer(containerFactory);
 						parent.put(key,newObject);
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newObject);
 						break;
 					default:
@@ -236,7 +236,7 @@ public class JSONParser {
 						Map newObject=createObjectContainer(containerFactory);
 						val.add(newObject);
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newObject);
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
@@ -244,7 +244,7 @@ public class JSONParser {
 						List newArray=createArrayContainer(containerFactory);
 						val.add(newArray);
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newArray);
 						break;
 					default:
